# ya_tagscript

./: .pre-commit-config.yaml  README.md  benchmark.py  playground.py  pyproject.toml  requirements.txt  setup.cfg
docs/: adapter.rst  block.rst  conf.py  exceptions.rst  getting_started.rst  interface.rst  interpreter.rst  user_blocks.rst  utils.rst  verb.rst
tests/: test_adapters.py  test_basic.py  test_edgecase.py  test_escapes.py  test_verbs.py
ya_tagscript/: __init__.py  interpreter.py  utils.py  verb.py
ya_tagscript/adapter/: discordadapters.py  functionadapter.py  intadapter.py  objectadapter.py  stringadapter.py
ya_tagscript/block/: __init__.py  breakblock.py  case.py  command.py  comment.py  control.py  cooldown.py  debug.py  delete.py  embedblock.py  fiftyfifty.py  helpers.py  listblock.py  loosevariablegetter.py  mathblock.py  randomblock.py  range.py  react.py  replaceblock.py  require_blacklist.py  stopblock.py  strf.py  strictvariablegetter.py  substr.py  timedelta.py  urlencodeblock.py
ya_tagscript/interface/: __init__.py  adapter.py  block.py
