[metadata]
name = ya_tagscript
version = attr: ya_tagscript.__version__
url = https://github.com/MajorTanya/YATagScript
author = MajorTanya
author_email = github@majortanya.eu
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Freely Distributable
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
license = Creative Commons Attribution 4.0 International License
license_file = LICENSE
description = Yet Another TagScript fork. An easy drop in user-provided Templating system.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
keywords = tagscript,

[options]
packages = find_namespace:
install_requires =
    discord.py==2.4.0
    pyparsing==3.1.4
python_requires = >=3.11

[options.packages.find]
include =
    ya_tagscript
    ya_tagscript.*
